--- a/.config/i3/config
+++ b/.config/i3/config
@@ -171,7 +171,7 @@ set $golden	#db9501
 
 set $yellow 	#f0bb0f
 set $darkyellow #785e08
-set $lightyellow #fff5cc
+set $lightyellow #cccc8a
 set $red 	#f45c42
 set $darkred	#802000
 set $black	#000000
@@ -180,8 +180,8 @@ set $white	#ffffff
 # Color config
 
 #			border		background	text		indicator
-client.focused		$green		$golden		$bark		$bronze
-client.focused_inactive $bark		$green		$bark		$green
+client.focused		$bronze		$golden		$bark		$bronze
+client.focused_inactive $lightyellow	$green		$bark		$green
 client.unfocused	$bronze		$bark		$golden		$bark
 client.background	$green
 
@@ -207,9 +207,10 @@ bar {
 
 # Startup config
 
-workspace $workspace1 output HDMI-0
-workspace $workspace2 output DVI-D-0
-workspace $workspace3 output DP-1
+
+workspace $workspace1 output DP-1
+workspace $workspace2 output HDMI-0
+workspace $workspace3 output DVI-D-0
 #workspace $workspace4 output HDMI-0
 
 exec --no-startup-id feh --randomize --bg-fill ~/Pictures/BG/*
@@ -219,24 +220,27 @@ exec --no-startup-id i3-msg 'workspace $workspace3; exec firefox'
 #exec --no-startup-id i3-msg 'workspace $workspace4; exec google-play-music-desktop-player'
 exec --no-startup-id /home/danr/bin/snom-eventd.py # Shows who is calling
 exec_always compton -f -D 1 # Needed for opaque rofi and window fade-in
+exec_always --no-startup-id redshift
 
 # Binds
-bindsym Mod4+l exec --no-startup-id ~/scripts/lock.sh
+bindsym Mod4+l exec --no-startup-id betterlockscreen -l
 bindsym Control+$mod+KP_0 exec --no-startup-id "dial --clipboard"
 bindsym Num_Lock exec --no-startup-id "sleep 0.1; numlockx on"
+bindsym Control+Print exec gnome-screenshot -a -i -c
 
 # Media Keys
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +1% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -1% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
-
-
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Specific config for windows
 for_window [class="Google Play Music Desktop Player"] floating enable
 for_window [class="TelegramDesktop"] floating enable
 for_window [title=".*WhatsApp"] floating enable
 for_window [class="TeamViewer"] floating enable
+for_window [class="Msgcompose"] floating enable
+for_window [class="Thunar"] floating enable
+for_window [class="KeePass2"] floating enable
 
 # Borders
 hide_edge_borders both
