various improvements to media handling

--- a/files/i3blocks.conf
+++ b/files/i3blocks.conf
@@ -29,11 +29,18 @@ separator_block_width=20
 markup=none
 
 # Custom Google Play Music Desktop Player Widget
-[gpmdp]
+#[gpmdp]
+#interval=1
+#command=$HOME/scripts/gpmdp_i3.sh
+#label=
+#color=#ffd119
+
+
+# Custom brightness indicator
+[brightness]
+label=🔆
+command=brightnessctl i -m | cut -d "," -f 4
 interval=1
-command=$HOME/scripts/gpmdp_i3.sh
-label=
-color=#ffd119
 
 # Volume indicator
 #
@@ -42,7 +49,7 @@ color=#ffd119
 # See the script for details.
 [volume]
 #label=VOL
-label=
+label=🔊
 instance=Master
 #instance=PCM
 interval=1
@@ -64,26 +71,26 @@ signal=10
 [disk]
 label=
 #instance=/mnt/data
-interval=30
+interval=60
 
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
-instance=enp2s0
+instance=wlp0s20f3
 color=#00FF00
 interval=10
 #separator=false
 label=
 
 [iface2]
-instance=enp2s0
+instance=tun0
 color=#00FF00
 interval=10
 #separator=false
 label=
-command=/usr/share/i3blocks/iface -6
+command=/usr/share/i3blocks/iface
 
 # CPU usage
 #
@@ -101,11 +108,11 @@ interval=1
 # Battery indicator
 #
 # The battery instance defaults to 0.
-#[battery]
+[battery]
 #label=BAT
-#label=⚡
-#instance=1
-#interval=30
+label=⚡
+instance=0
+interval=30
 
 # Date Time
 #
@@ -114,7 +121,7 @@ command=echo " $(date '+%H:%M:%S')"
 interval=1
 
 [date]
-command=echo " $(date '+%d-%m-%Y')"
+command=echo "$(date '+%d-%m-%Y')"
 interval=1
 # Generic media player support
 #
@@ -128,8 +135,9 @@ interval=1
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
+[openvpn]
+interval=20
+instance=tun0
 
 # Temperature
 #
