--- a/files/config
+++ b/files/config
@@ -230,8 +230,8 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle # mute mic
-bindsym XF86MonBrightnessUp exec --no-startup-id "sudo brightnessctl -q -d intel_backlight set +10%" # brightness up
-bindsym XF86MonBrightnessDown exec --no-startup-id "sudo brightnessctl -q -d intel_backlight set 10%-" # brightness down
+bindsym XF86MonBrightnessUp exec --no-startup-id sudo brightnessctl -q -d intel_backlight set +10% # brightness up
+bindsym XF86MonBrightnessDown exec --no-startup-id sudo brightnessctl -q -d intel_backlight set 10%- # brightness down
 bindsym XF86Tools exec --no-startup-id gnome-control-center
 
 
