--- a/files/i3blocks.conf
+++ b/files/i3blocks.conf
@@ -28,14 +28,6 @@ command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=20
 markup=none
 
-# Custom Google Play Music Desktop Player Widget
-#[gpmdp]
-#interval=1
-#command=$HOME/scripts/gpmdp_i3.sh
-#label=
-#color=#ffd119
-
-
 # Custom brightness indicator
 [brightness]
 label=🔆
@@ -48,10 +40,8 @@ interval=1
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-#label=VOL
 label=🔊
-instance=Master
-#instance=PCM
+command=pulsemixer --get-volume | cut -d " " -f 1 | sed "s/$/%/"
 interval=1
 signal=10
 
@@ -109,7 +99,6 @@ interval=1
 #
 # The battery instance defaults to 0.
 [battery]
-#label=BAT
 label=⚡
 instance=0
 interval=30
