--- a/files/i3blocks.conf
+++ b/files/i3blocks.conf
@@ -28,12 +28,11 @@ command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=20
 markup=none
 
-# Custom Google Play Music Desktop Player Widget
-[gpmdp]
+# Custom brightness indicator
+[brightness]
+label=🔆
+command=brightnessctl i -m | cut -d "," -f 4
 interval=1
-command=$HOME/scripts/gpmdp_i3.sh
-label=
-color=#ffd119
 
 # Volume indicator
 #
@@ -41,10 +40,8 @@ color=#ffd119
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-#label=VOL
-label=
-instance=Master
-#instance=PCM
+label=🔊
+command=pulsemixer --get-volume | cut -d " " -f 1 | sed "s/$/%/"
 interval=1
 signal=10
 
@@ -64,26 +61,26 @@ signal=10
 [disk]
 label=
 #instance=/mnt/data
-interval=30
+interval=60
 
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
-instance=enp2s0
+instance=wlp0s20f3
 color=#00FF00
 interval=10
 #separator=false
 label=
 
 [iface2]
-instance=enp2s0
+instance=tun0
 color=#00FF00
 interval=10
 #separator=false
 label=
-command=/usr/share/i3blocks/iface -6
+command=/usr/share/i3blocks/iface
 
 # CPU usage
 #
@@ -101,11 +98,10 @@ interval=1
 # Battery indicator
 #
 # The battery instance defaults to 0.
-#[battery]
-#label=BAT
-#label=⚡
-#instance=1
-#interval=30
+[battery]
+label=⚡
+instance=0
+interval=30
 
 # Date Time
 #
@@ -114,7 +110,7 @@ command=echo " $(date '+%H:%M:%S')"
 interval=1
 
 [date]
-command=echo " $(date '+%d-%m-%Y')"
+command=echo "$(date '+%d-%m-%Y')"
 interval=1
 # Generic media player support
 #
@@ -128,8 +124,9 @@ interval=1
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
+[openvpn]
+interval=20
+instance=tun0
 
 # Temperature
 #
