--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -28,11 +28,12 @@ command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=20
 markup=none
 
-# Custom brightness indicator
-[brightness]
-label=🔆
-command=brightnessctl i -m | cut -d "," -f 4
+# Custom Google Play Music Desktop Player Widget
+[gpmdp]
 interval=1
+command=$HOME/scripts/gpmdp_i3.sh
+label=
+color=#ffd119
 
 # Volume indicator
 #
@@ -40,8 +41,10 @@ interval=1
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=🔊
-command=pulsemixer --get-volume | cut -d " " -f 1 | sed "s/$/%/"
+#label=VOL
+label=
+instance=Master
+#instance=PCM
 interval=1
 signal=10
 
@@ -61,26 +64,26 @@ signal=10
 [disk]
 label=
 #instance=/mnt/data
-interval=60
+interval=30
 
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
-instance=wlp0s20f3
+instance=enp2s0
 color=#00FF00
 interval=10
 #separator=false
 label=
 
 [iface2]
-instance=tun0
+instance=enp2s0
 color=#00FF00
 interval=10
 #separator=false
 label=
-command=/usr/share/i3blocks/iface
+command=/usr/share/i3blocks/iface -6
 
 # CPU usage
 #
@@ -98,10 +101,11 @@ interval=1
 # Battery indicator
 #
 # The battery instance defaults to 0.
-[battery]
-label=⚡
-instance=0
-interval=30
+#[battery]
+#label=BAT
+#label=⚡
+#instance=1
+#interval=30
 
 # Date Time
 #
@@ -110,7 +114,7 @@ command=echo " $(date '+%H:%M:%S')"
 interval=1
 
 [date]
-command=echo "$(date '+%d-%m-%Y')"
+command=echo " $(date '+%d-%m-%Y')"
 interval=1
 # Generic media player support
 #
@@ -124,9 +128,8 @@ interval=1
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
-[openvpn]
-interval=20
-instance=tun0
+#[openvpn]
+#interval=20
 
 # Temperature
 #
