--- a/install.yml
+++ b/install.yml
@@ -63,3 +63,17 @@
         dest: /etc/sudoers.d/brightnessctl
         backup: no
       become: yes
+    
+    - name: "Copy suspend@ service template"
+      ansible.builtin.template:
+        src: files/suspend@.service.j2
+        dest: /etc/systemd/system/suspend@.service
+        backup: no
+      become: yes
+
+    - name: "Enable suspend@user service"
+      ansible.builtin.systemd:
+        name: suspend@{{ ansible_user_id }}.service
+        enabled: yes
+        daemon_reload: yes
+      become: yes
