Added temperature check, updated icons and disabled non-working vpn check

--- a/files/i3blocks.conf
+++ b/files/i3blocks.conf
@@ -98,7 +98,7 @@ interval=1
 #
 # The battery instance defaults to 0.
 [battery]
-label=⚡
+label=
 instance=0
 interval=5
 
@@ -123,18 +123,20 @@ interval=1
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
-[openvpn]
-interval=20
-instance=tun0
+#[openvpn]
+#label=
+#interval=20
+#instance=tun0
 
 # Temperature
 #
 # Support multiple chips, though lm-sensors.
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
+[temperature]
+label=
+interval=1
+command=/usr/share/i3blocks/temperature -w 50 -c 60
 
 # Key indicators
 #
